src/style/style.css
body {
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
    padding-top: 70px;
}

.righteous {
    font-family: 'Righteous', cursive;
}

.trans-nav {
    background-color: rgba(0, 0, 0, 0);
    transition: background 500ms;
}

.navbar-light .navbar-brand {
    color: rgba(0, 0, 0, 0.3);
}

html.loading,
loading body {
    margin: 0;
    height: 100%;
    overflow: hidden;
}

body,
html {
    height: 100%;
}

.myPic {
    flex-grow: 1;
    /* max-width: 85%; */
    object-fit: contain;
}

.intro-container {
    margin-top: 1.5%;
    width: 80vw;
    height: 75vh;
    overflow: hidden;
}

.landingNote {
    font-family: 'Raleway', sans-serif;
    font-size: calc(20px + (30 - 20) * ((100vw - 300px) / (1600 - 300)));
    color: rgb(105, 105, 105);
    text-align: center;
    opacity: 1;
}

.landingNote.overflow {
    opacity: 0;
}

.landingText {
    font-family: 'Raleway', sans-serif;
    line-height: 1.3;
    font-size: calc(42px + (96 - 42) * ((100vw - 300px) / (1600 - 300)));
}

.landingLine {
    margin: 0px;
    padding: 0px;
    border-top: 1px solid rgb(105, 105, 105);
    border-bottom: 2px solid rgba(0, 0, 0, 0.5);
}

.intro-text {
    background-color: rgba(0, 0, 0, 0.4);
    color: white;
    padding: 1%;
    text-align: center;
    height: 100%;
    width: 100%;
}

#me {
    overflow: auto;
    position: relative;
}

.navbar.scrolled {
    background: rgba(115, 194, 251, 0.95);
    transition: background 500ms;

}

.blue-bg {
    background: rgba(115, 194, 251, 0.95);
    transition: background 500ms;
}

#me {
    height: calc(100vh - 70px);
}

#me:before {
    content: "";
    position: fixed;
    left: 0;
    right: 0;
    z-index: -1;

    display: block;
    background-image: url('../../assets/misc/bg.jpg');
    background-size: cover;
    width: 100%;
    height: 100vh;

    -webkit-filter: blur(8px);
    -moz-filter: blur(8px);
    -o-filter: blur(8px);
    -ms-filter: blur(8px);
    filter: blur(8px);

    background-position: center;
    background-repeat: no-repeat;
}

#projects {
    /* background: rgb(163, 208, 247); */
    background: #1B6882;
}

.code-joke {
    object-fit: contain;
}

#contact {
    background-color: #632C3C;
}

#about {
    background-color: #212121;
}

.scroll-down {
    text-align: center;
    font-size: 3.5em;
    color: rgba(0, 0, 0, 0.4);
    transition: color 500ms;
}

.about-text {
    font-family: 'Quicksand', sans-serif;
    font-size: 1.5em;
    font-weight: 400;
}

.about-heading {
    font-family: 'Quicksand', sans-serif;
    font-weight: 400;
    border-bottom: 1px solid cornsilk;
    font-size: 4em;
}

.projects-heading {
    font-family: 'Quicksand', sans-serif;
    border-bottom: 1px solid cornsilk;
    font-weight: 400;
    font-size: 4em;
}

.scroll-down:hover {
    color: white;
    transition: color 1000ms;
    text-decoration: none;
}

.card {
    background: rgb(238, 238, 238);
    background: -moz-linear-gradient(left, rgba(238, 238, 238, 1) 0%, rgba(204, 204, 204, 1) 100%);
    background: -webkit-linear-gradient(left, rgba(238, 238, 238, 1) 0%, rgba(204, 204, 204, 1) 100%);
    background: linear-gradient(to right, rgba(238, 238, 238, 1) 0%, rgba(204, 204, 204, 1) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#cccccc', GradientType=1);
    -webkit-box-shadow: 15px 15px 10px 0px rgba(0, 0, 0, 0.5);
    -moz-box-shadow: 15px 15px 10px 0px rgba(0, 0, 0, 0.5);
    box-shadow: 15px 15px 10px 0px rgba(0, 0, 0, 0.5);
    border-radius: 1%;
}

.card-text {
    font-family: 'Quicksand', sans-serif;
    font-weight: 500;
}

.card-title {
    font-family: 'Quicksand', sans-serif;
    font-weight: 700;
}

.card-img-top {
    max-width: 96%;
    display: block;
    margin: auto;
    border: 3px solid #1B6882;
    padding: 0px;
    margin-top: 2%;
    border-radius: 2.5%;
}

.myPic {
    max-height: 72%;
}
.navbar-light .navbar-brand{
    color: #993723;
}
.trans-init{
    opacity: 0;
}
#main-navbar{
    transition-timing-function: ease-out;    
    transition: 0.8s;
}
@media (min-width: 992px) {
    .myPic {
        max-height: 100%;
    }
}

